--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: country_picker_plus
 description: A flutter package to display list of Countries, States and Cities depends on Selected, also you can search country, state, and city all around the world.
-version: 1.0.0+5
+version: 2.0.0
 homepage: https://github.com/real-ali/country_picker_plus
 
 environment:
@@ -8,7 +8,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+ 
+ 
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
